# winelocale

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.cfg
src/winelocale/: winelocale.py
