[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "winelocale"
version = "0.7.0"
description = "a Python script to immitate Microsoft's AppLocale for Wine"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
authors = [
    { name = "Derrick Sobodash", email = "derrick@cinnamonpirate.com" },
]
dependencies = [
    "pygobject",
]

[project.scripts]
winelocale = "current.winelocale:main"

[project.urls]
Homepage = "http://code.google.com/p/winelocale/"

