[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "winelocale"
version = "0.7.0"
description = "a Python script to immitate Microsoft's AppLocale for Wine"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
authors = [
    { name = "Derrick Sobodash", email = "derrick@cinnamonpirate.com" },
]
dependencies = [
    "pygobject",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: GTK",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Games/Entertainment"
]

[project.scripts]
winelocale = "current.winelocale:main"

[project.urls]
Homepage = "http://code.google.com/p/winelocale/"

